--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h1>Sports Site</h1>
 	</header>
 	<main>
-		<section>
+		<section class="products">
 			<h2>Products</h2>
 			<img src="images/gel.jpg"
 				 alt="runner putting gel in pocket">
@@ -25,6 +25,33 @@
 				 alt="man running with backpack">
 			<img src="images/headlamp.jpg"
 				 alt="hand holding headlamp">
+		</section>
+		<section>
+			<h2>Links</h2>
+			<ul>
+				<li><a target="_blank"
+					   href="https://en.wikipedia.org/wiki/Marathon">History of the marathon</a></li>
+				<li><a target="_blank"
+					   href="https://www.bmw-berlin-marathon.com">Berlin Marathon</a></li>
+			</ul>
+		</section>
+		<section>
+			<h2>Links</h2>
+			<ul>
+				<li><a target="_blank"
+					   href="https://en.wikipedia.org/wiki/Marathon">History of the marathon</a></li>
+				<li><a target="_blank"
+					   href="https://www.bmw-berlin-marathon.com">Berlin Marathon</a></li>
+			</ul>
+		</section>
+		<section>
+			<h2>Links</h2>
+			<ul>
+				<li><a target="_blank"
+					   href="https://en.wikipedia.org/wiki/Marathon">History of the marathon</a></li>
+				<li><a target="_blank"
+					   href="https://www.bmw-berlin-marathon.com">Berlin Marathon</a></li>
+			</ul>
 		</section>
 		<section>
 			<h2>Links</h2>
