--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		</section>
 	</main>
 	<footer>
-		<img src="images/runner-in-sun.jpg"
+		<img src="images/runsun_wide.jpg"
 			 alt="person running with sunset">
 		<p>We wish you wonderful runs.</p>
 	</footer>
